--- a/src/index.scss
+++ b/src/index.scss
@@ -3,7 +3,7 @@
 body {
   margin: 0;
   background-color: $background-color;
-  font-family: 'Lato', sans-serif;
+  font-family: 'Lato', sans-serif;//Great Vibes', cursive
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
