--- a/src/components/guestModal/guestModal.scss
+++ b/src/components/guestModal/guestModal.scss
@@ -6,7 +6,7 @@
     right: 0;
     bottom: 0;
     left: 0;
-    background: #fff;
+    background: $white-color;
     opacity: 0.5;
 
     &.hide {
@@ -24,8 +24,6 @@
     margin-top: 10%;
     display: flex;
     flex-direction: column;
-    // justify-content: center;
-
     align-items: center;
 
     .modal-wrapper {
@@ -33,7 +31,7 @@
         border-top-right-radius: 4px;
         border-top-left-radius: 4px;
         border: 1px solid #000;
-        background: #fff;
+        background: $white-color;
 
         .modal-header {
             position: relative;
@@ -81,7 +79,7 @@
     transition: all .2s;
     text-transform: uppercase;
     display: inline-block;
-    background: #181818;
+    background: $grey-black-color;
     border-radius: 25px;
     padding: 10px 25px;
     color: $btn-color;
@@ -92,10 +90,14 @@
 
 btn:hover {
     background: $btn-color;
-    color: #181818;
+    color: $grey-black-color;
     border-color: $btn-color;
 }
 
 .modalBtn {
     width: 32%;
+}
+
+.leftBtn{
+    margin-right: 12px;
 }
